Proj06/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\bluej\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\bluej\lib\bluejcore.jar;D:\bluej\lib\junit-4.11.jar;D:\bluej\lib\hamcrest-core-1.3.jar;D:\bluej\lib\lang-stride.jar;D:\bluej\lib\javafx\lib\javafx.base.jar;D:\bluej\lib\javafx\lib\javafx.controls.jar;D:\bluej\lib\javafx\lib\javafx.fxml.jar;D:\bluej\lib\javafx\lib\javafx.graphics.jar;D:\bluej\lib\javafx\lib\javafx.media.jar;D:\bluej\lib\javafx\lib\javafx.properties.jar;D:\bluej\lib\javafx\lib\javafx.swing.jar;D:\bluej\lib\javafx\lib\javafx.web.jar;D:\Projects\Proj06
-d
D:\Projects\Proj06\doc
-encoding
UTF-8
-charset
UTF-8
D:\Projects\Proj06\PollDisplayPanel.java
<---- end of javadoc command ---->
Loading source file D:\Projects\Proj06\PollDisplayPanel.java...
D:\Projects\Proj06\PollDisplayPanel.java:93: error: not a statement
      _________________________________________________
      ^
D:\Projects\Proj06\PollDisplayPanel.java:93: error: ';' expected
      _________________________________________________
                                                       ^
2 errors
